- Support "That person is in another deal." error.

New commands:
- getplayerinfo (number)
  Ask the server for the name of the object with that ID. You will not
  see the reply unless you have debug level 2.
- storage addfromcart <cart_item> [<amount>]
  storage gettocart <storage_item> [<amount>]
  Support for adding/getting items directly to/from merchant cart
- whoami
  Displays your character and account ID.

New config options:
- partySkill: target_dist (range)
  This is the same as target_dist for attackSkillSlot.
  Only use the skill if the player is in the given range.
- partySkill: isSelfSkill (flag)
  Use this skill on yourself after checking the party conditions.
  Useful for Magnificat or Gloria.
- cachePlayerNames (flag)
    Turns player name caching on or off.

  cachePlayerNames_duration (seconds)
    Cache player names for a maximum time of (seconds). The default is
    900 seconds (15 minutes).

  cachePlayerNames_maxSize (number)
    Maximum cache size. The default is 100.

- storageAuto_keepOpen (flag)
  Set to true if you want to keep storage open after storageAuto sequence.
  Only enable this if you know what you're doing.
  (Note: You cannot use items while storage is open.)
- itemsTakeAuto_new (flag)
  Activates experimental new item taking code; might work better for
  archers who keep failing to take items.
- "s" sequence for NPC talk steps; the client sends this when you click
  "Sell" at a shop NPC.
- attackLooters (flag)
  Enables Looter attack. (Warning attacks all monsters.).
  Will only attack if item_pickup is not 0
- teleportAuto_dropTargetKS (flag)
  Teleport if Kore drops target due to kill-steal. This is a workaround
  for constantly dropping and selecting the same target.
- logConsole (flag)
  Log everything that openkore prints on the console to logs\console.txt.
- attackAuto_notInTown (flag)
  Don't attack monsters while inside a town.
- new option in buyAuto: zeny (range)
  only buy if you have the specified Zeny